Fixes & Improves minor issues
    Add Wpforms migrator confirmation/notifications

    Fix gravity form migrator confirmation/notifications

    Fix wpforms migrator confirmation/notifications

    Fix file/image step data save

    Resolve image url when for partial entries

    Fix pagination remember current page

    All forms and Entries page

    Fix URL cut off entries section

    Add editor field drag&drop up/down

--- a/resources/assets/admin/styles/_list.scss
+++ b/resources/assets/admin/styles/_list.scss
@@ -165,6 +165,10 @@
                     white-space: nowrap;
                     overflow: hidden;
                     text-overflow: ellipsis;
+                    &.lead-url {
+                        white-space: unset;
+                        word-break: break-all;
+                    }
                 }
             }
         }
